added three additional octocats, with wrap

--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
         </div> <!-- .image-caption -->
       </div> <!-- .image-footer -->
     </li>
+
+
     <li class="octocat">
       <a href="https://octodex.github.com/topguntocat">
         <img src="https://octodex.github.com/images/topguntocat.png" />
@@ -54,6 +56,8 @@
         </div> <!-- .image-caption -->
       </div> <!-- .image-footer -->
     </li>
+
+
     <li class="octocat">
       <a href="https://octodex.github.com/carlostocat">
         <img src="https://octodex.github.com/images/carlostocat.gif" />
@@ -63,6 +67,73 @@
         <div class="image-caption">
           <span>the</span>
           <a href="https://octodex.github.com/carlostocat">Carlostocat</a>
+          <span>by</span>
+          <ul class="authors">
+            <li>
+              <a href="https://github.com/jeejkang">
+                <img src="https://github.com/jeejkang.png" />
+              </a>
+            </li>
+          </ul>
+        </div> <!-- .image-caption -->
+      </div> <!-- .image-footer -->
+    </li>
+
+
+
+    <li class="octocat">
+      <a href="https://octodex.github.com/droctocat">
+        <img src="https://octodex.github.com/images/droctocat.png" />
+      </a>
+      <div class="image-footer">
+        <span class="image-number">112</span>
+        <div class="image-caption">
+          <span>the</span>
+          <a href="https://octodex.github.com/droctocat">Dr.Octocat</a>
+          <span>by</span>
+          <ul class="authors">
+            <li>
+              <a href="https://github.com/jeejkang">
+                <img src="https://github.com/jeejkang.png" />
+              </a>
+            </li>
+          </ul>
+        </div> <!-- .image-caption -->
+      </div> <!-- .image-footer -->
+    </li>
+
+
+    <li class="octocat">
+      <a href="https://octodex.github.com/spidertocat">
+        <img src="https://octodex.github.com/images/spidertocat.png" />
+      </a>
+      <div class="image-footer">
+        <span class="image-number">111</span>
+        <div class="image-caption">
+          <span>the</span>
+          <a href="https://octodex.github.com/spidertocat">Spidertocat</a>
+          <span>by</span>
+          <ul class="authors">
+            <li>
+              <a href="https://github.com/jeejkang">
+                <img src="https://github.com/jeejkang.png" />
+              </a>
+            </li>
+          </ul>
+        </div> <!-- .image-caption -->
+      </div> <!-- .image-footer -->
+    </li>
+
+
+    <li class="octocat">
+      <a href="https://octodex.github.com/megacat-2">
+        <img src="https://octodex.github.com/images/megacat-2.png" />
+      </a>
+      <div class="image-footer">
+        <span class="image-number">110</span>
+        <div class="image-caption">
+          <span>the</span>
+          <a href="https://octodex.github.com/megacat-2">Megacat V2</a>
           <span>by</span>
           <ul class="authors">
             <li>
